[metadata]
name = buaut
maintainer = wilmardo
maintainer_email = info@wilmardenouden.nl
summary = buaut are several Bunq automations in a convenient CLI tool.
description-file = README.md
description-content-type = text/markdown
project_urls =
    Bug Tracker = https://github.com/wilmardo/buaut/issues
    Source Code = https://github.com/wilmardo/buaut
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration
    Topic :: Utilities

[extras]
docs =
    Sphinx

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    buaut = buaut.shell:main

[build_sphinx]
builders = html,man
source-dir = doc/source
build-dir = doc/build
all-files = 1

[wheel]
universal = 1
